Fixed (previously broken) Clover test target (JPA instrumentation JVM args needed to be passed).
git-svn-id: https://src.springframework.org/svn/spring-maintenance/trunk@10273 fd5a2b45-1f63-4059-99e9-3c7cb7fd75c8